--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,16 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="shortcut icon" type="image/png" href="./logo.png"/>
+
 </head>
 <body>
   <app-root></app-root>
 </body>
+<script src="https://unpkg.com/splitting@1.0.0/dist/splitting.js"></script>
+<script>
+    Splitting();
+</script>
 </html>
